<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infoDetailBeerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/text_info_description"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/dataUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:text="@string/enter_your_information_below_to_complete_your_purchaser"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgCard"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:scaleType="centerCrop"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/your_address"
            android:inputType="textPostalAddress"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnIntent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_payment_method"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>