<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    tools:context=".fragment.BeerListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorSecondary"
            android:contentDescription="@string/todo"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:src="@drawable/ic_checkout_shopping_cart"
            android:tint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_info_name" />

        <ImageButton
            android:id="@+id/add_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/todo"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:src="@drawable/ic_add_shopping"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/buy"
            app:layout_constraintStart_toEndOf="@+id/buy"
            app:layout_constraintTop_toTopOf="@+id/buy" />


        <ImageView
            android:id="@+id/beer_info_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/kit_bamberg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_example"
            />

        <TextView
            android:id="@+id/beer_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/bee_text_example"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_info_description"
            />

        <TextView
            android:id="@+id/beer_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-small"
            android:hint="@string/text_info_description"
            android:textColor="@color/info"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_info_photo"
            />

        <TextView
            android:id="@+id/beer_info_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="@+id/buy"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="R$199.99"
            />

        <ImageView
            android:id="@+id/highly_rated_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/add_cart"
            app:layout_constraintStart_toEndOf="@+id/add_cart"
            app:srcCompat="@drawable/high_rate"
            app:tint="@color/colorPrimaryDark"
            android:contentDescription="@string/image_example_rate"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>